syntax = "proto3";

/*
 * Put everything into SendMessage namespace.
 */ 
package SendMessage;

message Request
{
    string recipient     = 1;
    bytes encrypted_data = 2;
}

message Response
{
}

/*
 * Proper message structure.
 * It consists of sender's id, content (text message) and digital message signature (signed by sender).
 */ 
message Message
{
    string sender   = 1;
    string content  = 2;
    bytes signature = 3;
}
